# cpp-tooling-example

./: CMakeLists.txt  Makefile  README.md  vcpkg.json
.github/workflows/: dummy_test.yaml
src/: main.cpp
